Fixed creation of mulitple repos types for different teams. Removed testing defaults because they will be overwritten anyways. Init roles.yml.j2

--- a/molecule/default-converge.yml
+++ b/molecule/default-converge.yml
@@ -10,6 +10,7 @@
     - nexus_ldap_test_vars.yml
     - .nexus-downloads/hosted-result.yml
     - .nexus-downloads/proxies-result.yml
+    - .nexus-downloads/roles-result.yml
 
   environment:
     http_proxy: "{{ lookup('env', 'http_proxy') }}"
