--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -471,6 +471,7 @@
 
 - name: Config Postgres
   ansible.builtin.include_tasks: enable_postgres.yml
+  when: nexus_enable_pro_version | default(false) | bool
   tags: nexus-postgres
 
 - name: Enable nexus systemd service and make sure it is started
