--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -450,11 +450,7 @@ nexus_repos_pypi_hosted:
     version_policy: release
     write_policy: allow # one of "allow", "allow_once" or "deny"
 
-nexus_repos_pypi_group:
-  - name: pypi-all
-    member_repos:
-      - pypi-internal
-      - pypi
+nexus_repos_pypi_group: []
 
 nexus_repos_pypi_proxy:
   - name: pypi
@@ -490,11 +486,7 @@ nexus_repos_raw_hosted:
     version_policy: release
     write_policy: allow_once # one of "allow", "allow_once" or "deny"
 
-nexus_repos_raw_group:
-  - name: raw-all
-    member_repos:
-      - raw-internal
-      - ubuntu-archive
+nexus_repos_raw_group: []
 
 # Docker support
 _nexus_repos_docker_defaults:
@@ -645,12 +637,7 @@ nexus_repos_nuget_hosted:
   - name: nuget-internal
     blob_store: "{{ nexus_blob_names.nuget.blob }}"
 
-nexus_repos_nuget_group:
-  - name: nuget-all
-    blob_store: "{{ nexus_blob_names.nuget.blob }}"
-    member_repos:
-      - nuget-internal
-      - nuget-proxy
+nexus_repos_nuget_group: []
 
 nexus_repos_nuget_proxy:
   - name: nuget-proxy
