--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -151,11 +151,27 @@
         call_args: "{{ nexus_repos_cleanup_policies }}"
       when: nexus_repos_cleanup_policies | length > 0
       tags: cleanup
+     
+    - name: Get all existing routing rules
+      ansible.builtin.uri:
+        url: "{{ nexus_api_scheme }}://{{ nexus_api_hostname }}:{{ nexus_api_port }}{{ nexus_api_context_path }}service/rest/v1/routing-rules"
+        user: admin
+        password: "{{ current_nexus_admin_password }}"
+        method: GET
+        force_basic_auth: true
+        validate_certs: "{{ nexus_api_validate_certs }}"
+        body_format: json
+        return_content: yes
+        status_code: 200
+      register: __nexus_existing_routing_rules__
+      tags: repos
+      when: nexus_use_api_for_provisioning | default(false) | bool
 
     - name: Create/Update routing rules using API
       ansible.builtin.include_tasks: routing_rules.yml
       vars:
         api_payload: "{{ nexus_routing_rules | d([]) }}"
+      tags: repos
 
     - name: Apply defaults to repositories configurations and process a single list
       ansible.builtin.include_tasks: process_repos_list.yml
