--- a/tasks/routing_rules.yml
+++ b/tasks/routing_rules.yml
@@ -13,20 +13,20 @@
   loop: "{{ api_payload }}"
   loop_control:
     loop_var: routing_rules
-  # when: repo.name not in __nexus_existing_repos__.json | map(attribute='name') | list
+  when: routing_rules.name not in __nexus_existing_routing_rules__.json | map(attribute='name') | list
 
-# - name: Update repositories when repository exists
-#   ansible.builtin.uri:
-#     url: "{{ nexus_api_scheme }}://{{ nexus_api_hostname }}:{{ nexus_api_port }}{{ nexus_api_context_path }}service/rest/v1/repositories/{{ repo.format }}/{{ repo.type}}/{{ repo.name }}"
-#     user: admin
-#     password: "{{ current_nexus_admin_password }}"
-#     method: PUT
-#     force_basic_auth: true
-#     validate_certs: "{{ nexus_api_validate_certs }}"
-#     body_format: json
-#     body: "{{ repo }}"
-#     status_code: 204
-#   loop: "{{ api_payload }}"
-#   loop_control:
-#     loop_var: repo
-  # when: repo.name in __nexus_existing_repos__.json | map(attribute='name') | list
+- name: Update Routing rules when Routing rules exists
+  ansible.builtin.uri:
+    url: "{{ nexus_api_scheme }}://{{ nexus_api_hostname }}:{{ nexus_api_port }}{{ nexus_api_context_path }}service/rest/v1/routing-rules/{{ routing_rules.name }}"
+    user: admin
+    password: "{{ current_nexus_admin_password }}"
+    method: PUT
+    force_basic_auth: true
+    validate_certs: "{{ nexus_api_validate_certs }}"
+    body_format: json
+    body: "{{ routing_rules }}"
+    status_code: 204
+  loop: "{{ api_payload }}"
+  loop_control:
+    loop_var: routing_rules
+  when: routing_rules.name in __nexus_existing_routing_rules__.json | map(attribute='name') | list
