--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -68,7 +68,7 @@
       nexus_package: >-
       {{
         'nexus-' + nexus_version
-        + '-java' + nexus_java_version
+        + '-java' + nexus_java_version | string
         + '-unix.tar.gz'
         if nexus_version is version_compare('3.67.1-01', '>=') and nexus_version is version_compare('3.70.1-02', '<=')
         else 'nexus-' + nexus_version + '-unix.tar.gz'
