Add Java suffix to package name when Nexus version falls in range of 3.67 and 3.70 (#33)
Signed-off-by: Brian Veltman <2551674+brianveltman@users.noreply.github.com>

--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -92,7 +92,7 @@
   vars:
     version_info: |-
       Used version: {{ nexus_version }}
-      Java version: {{ nexus_java_version | default(8) }}
+      Java version: {{ nexus_java_version | default(17) }}
       Version detected from: {{ nexus_version_detected_from }}
       Upgrade allowed: {{ nexus_upgrade | default(false) | bool }}
       Current running version: {{ nexus_version_running | default('none') }}
@@ -101,7 +101,14 @@
 
 - name: Register nexus package name
   ansible.builtin.set_fact:
-    nexus_package: nexus-{{ nexus_version }}{{ (nexus_java_version > 8) | ternary('-java11', '-java8') }}-unix.tar.gz
+      nexus_package: >-
+      {{
+        'nexus-' + nexus_version
+        + '-java' + nexus_java_version | string
+        + '-unix.tar.gz'
+        if nexus_version is version_compare('3.67.1-01', '>=') and nexus_version is version_compare('3.70.1-02', '<=')
+        else 'nexus-' + nexus_version + '-unix.tar.gz'
+      }}
 
 - name: Download nexus_package
   ansible.builtin.get_url:
