--- a/molecule/nexus_common_test_vars.yml
+++ b/molecule/nexus_common_test_vars.yml
@@ -9,10 +9,12 @@ nexus_api_timeout: 45
 nexus_custom_jvm_settings:
   - XX:+UseG1GC
   - XX:+PrintGCDetails
-  - Xloggc:{{ nexus_installation_dir }}log/gc.log
-  - XX:+UseGCLogFileRotation
-  - XX:NumberOfGCLogFiles=10
-  - XX:GCLogFileSize=50m
+  - Xloggc:{{ nexus_data_dir }}/log/gc.log
+  # - XX:+UseGCLogFileRotation
+  # - XX:NumberOfGCLogFiles=10
+  # - XX:GCLogFileSize=50m
+  - XX:+UnlockDiagnosticVMOptions
+  - XX:+LogVMOutput
 
 nexus_download_dir: /nexus-downloads
 
@@ -38,7 +40,7 @@ nexus_config_r: true
 nexus_config_conda: true
 nexus_config_conan: true
 nexus_config_go: true
-nexus_config_bower: true
+nexus_config_bower: false
 nexus_config_p2: true
 nexus_config_cocoapods: true
 
@@ -50,169 +52,155 @@ nexus_rut_auth_realm: false
 nexus_rut_auth_header: CUSTOM_RUT_HEADER
 
 nexus_repos_cleanup_policies:
-  - name: all_cleanup
-    format: all
-    notes: "All"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
+# Needs work, format ALL is not supported through API
+  # - name: all_cleanup
+  #   format: "all"
+  #   notes: "All"
+  #   criteriaLastBlobUpdated: 60
+  #   criteriaLastDownloaded: 120
   - name: mvn_cleanup
     format: maven2
     notes: "mvn"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
   - name: mvn_releases_cleanup
     format: maven2
     notes: "mvn RELEASES"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      isPrerelease: RELEASES
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaReleaseType: RELEASES
   - name: mvn_prereleases_cleanup
     format: maven2
     notes: "mvn PRERELEASES"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      isPrerelease: PRERELEASES
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaReleaseType: PRERELEASES
   - name: python_cleanup
     format: pypi
     notes: "Python pip"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: docker_cleanup
     format: docker
     notes: "Docker"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: raw_cleanup
     format: raw
     notes: "Raw"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: rubygems_cleanup
     format: rubygems
     notes: "Rubygems"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: npm_cleanup
     format: npm
     notes: ""
-    criteria:
-      regexKey: "beta-*"
+    criteriaAssetRegex: "beta-*"
   - name: npm_releases_cleanup
     format: npm
     notes: "npm RELEASES"
-    criteria:
-      regexKey: "beta-*"
-      isPrerelease: RELEASES
+    criteriaAssetRegex: "beta-*"
+    criteriaReleaseType: RELEASES
   - name: npm_prereleases_cleanup
     format: npm
     notes: "npm PRERELEASES"
-    criteria:
-      regexKey: "beta-*"
-      isPrerelease: PRERELEASES
+    criteriaAssetRegex: "beta-*"
+    criteriaReleaseType: PRERELEASES
   - name: nuget_cleanup
     format: nuget
     notes: "NuGet"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: gitlfs_cleanup
     format: gitlfs
     notes: "gitlfs"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
   - name: yum_prerelease_cleanup
     format: yum
     notes: "yum PRERELEASES"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
-      isPrerelease: PRERELEASES
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
+    criteriaReleaseType: PRERELEASES
   - name: yum_release_cleanup
     format: yum
     notes: "yum RELEASES"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
-      isPrerelease: RELEASES
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
+    criteriaReleaseType: RELEASES
   - name: yum_cleanup
     format: yum
     notes: "yum"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: apt_cleanup
     format: apt
     notes: "apt"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: helm_cleanup
     format: helm
     notes: "Helm"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: r_cleanup
     format: r
     notes: "r"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: conda_cleanup
     format: conda
     notes: "conda"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: go_cleanup
     format: go
     notes: "go"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: cocoapods_cleanup
     format: cocoapods
     notes: "cocoapods"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: conan_cleanup
     format: conan
     notes: "conan"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
   - name: p2_cleanup
     format: p2
     notes: "p2"
-    criteria:
-      lastBlobUpdated: 60
-      lastDownloaded: 120
-      regexKey: "beta-*"
+    criteriaLastBlobUpdated: 60
+    criteriaLastDownloaded: 120
+    criteriaAssetRegex: "beta-*"
+  - name: remove-release-containers
+    format: docker
+    notes: "Policy for removing that were considered release at some time"
+    criteriaLastBlobUpdated: 90
+    criteriaLastDownloaded:
+    criteriaReleaseType:
+    criteriaAssetRegex: 
+    retain: 5
+
 nexus_repos_maven_proxy:
   - name: central-blob-default-permissive-http-authentication
     remote_url: https://repo1.maven.org/maven2/
@@ -492,19 +480,19 @@ nexus_repos_rubygems_group:
       - rubygems-hosted
       - rubygems-proxy
 
-nexus_repos_bower_proxy:
-  - name: bower-proxy
-    remote_url: https://bower.herokuapp.com/
+# nexus_repos_bower_proxy:
+#   - name: bower-proxy
+#     remote_url: https://bower.herokuapp.com/
 
-nexus_repos_bower_hosted:
-  - name: bower-hosted
-    write_policy: allow
+# nexus_repos_bower_hosted:
+#   - name: bower-hosted
+#     write_policy: allow
 
-nexus_repos_bower_group:
-  - name: bower-all
-    member_repos:
-      - bower-hosted
-      - bower-proxy
+# nexus_repos_bower_group:
+#   - name: bower-all
+#     member_repos:
+#       - bower-hosted
+#       - bower-proxy
 
 nexus_repos_helm_hosted:
   - name: helm-hosted
